--- a/css/main.css
+++ b/css/main.css
@@ -36,14 +36,22 @@ p {
 	font-family: "Mesmerize", Arial, sans serif;
 }
 
-.nav-justified {
+.nav-tabs.nav-justified {
+	width: 95%;
+	margin: 0 auto;
+}
+
+.nav-justified li {
 	background: #B7A298;
 }
 
-.nav-justified li:active {
-	background-color: blue;
+.nav-justified li.active {
+	background-color: rgba(255,255,255,0.3);
 }
 
+.nav-justified li:hover {
+	background-color: rgba(255,255,255,0.4);
+}
 
 .nav-justified li a img {
 	max-width: 100px;
@@ -53,6 +61,10 @@ p {
 	font-family: "DK", Arial, sans-serif;
 	font-size: 1.5rem;
 	color: #80545d;
+}
+
+.nav-tabs.nav-justified > li > a {
+	border-bottom: 0;
 }
 
 .home {
@@ -78,11 +90,14 @@ p {
 	background-color: #B7A298;
 	margin-left: -15px;
 	margin-right: -15px;
+	padding-top: 50px;
 
 }
 
 #tabs li a {
 	border-radius: 0;
+	background-color: transparent;
+	border: 0;
 }
 
 .tab-content {
@@ -757,6 +772,10 @@ embed {
 	color: #f6f6f6;
 }
 
+.footer-copyright a {
+	color: #D6C5AA;
+}
+
 
 section {
 	position: relative;
@@ -849,7 +868,7 @@ section::after {
 .navbar-default {
 	position: absolute;
 	top: 0px;
-	background-color: transparent;
+	background-color: white;
 	border: none;
 	font-family: "DK", Arial, sans-serif;
 	font-size:1.6rem;
