--- a/css/main.css
+++ b/css/main.css
@@ -166,18 +166,6 @@ a:hover {
 	text-decoration: none;
 }
 
-address {
-	background-color: #222222;
-	margin-top: -6px;
-	border: 1px solid #222222;
-	-webkit-border-radius: 2px;
-	-moz-border-radius: 2px;
-	border-radius: 2px;
-	font-size:1.5rem;
-	text-align: right;
-	padding: 30px;
-}
-
 #poa {
 	padding-top: 50px;
 	padding-bottom: 50px;
@@ -191,8 +179,8 @@ address {
 	background-color: #0e6a97;
 }
 
-#location-img {
-	background-image: url('images/portoalegre.jpg');
+#location-a {
+	background-image: url('../images/un_membersflags.jpg');
 	-webkit-background-size: cover;
 	background-size: cover;
 }
@@ -373,10 +361,69 @@ embed {
 
 /* Sections Style */
 
+.hidden {
+	display: none;
+}
+
+.visible {
+	display: inline;
+}
+
 
 .gray {
 	background: #667677;
 	color: #FFFFFF;
+}
+
+.gray-50 {
+	background: rgba(102, 118, 119, 0.93);
+}
+
+.gray-70 {
+	background: rgba(102, 118, 119, 0.7);
+}
+
+.gray-70-svg {
+	fill: rgba(102, 118, 119, 0.7);
+}
+
+.purple-70 {
+	background-color: rgba(114,68,79,0.7);
+}
+
+.purple-50 {
+	background-color: rgba(114,68,79,0.93)
+}
+
+.purple {
+	background-color: rgb(114,68,79);
+}
+
+.purple h6 {
+	text-align: center;
+}
+
+.purple .box {
+	border: 1px solid  #5B2736;
+	text-align: center;
+	padding: 15px;
+}
+
+#committees {
+	background-image: url('../images/un_membersflags.jpg');
+	background-size: cover;
+}
+
+.orange {
+	background-color: #cb7223;
+}
+
+.orange-70 {
+	background-color: #F29B44;
+}
+
+.orange-50 {
+	background-color: rgb(219,127,44);
 }
 
 .content {
@@ -385,14 +432,45 @@ embed {
 }
 
 .section-title {
-	text-align: left;
+	margin-top: 120px;
+	padding-top: 10px;
+	height: 130px;
+}
+
+.section-title h2 {
+	font-size: 35px;
+	text-align: center;
 	text-transform: uppercase;
-	color: black;
+	color: white;
 	-webkit-font-smoothing: antialiased;
 	-moz-font-smoothing: antialiased;
 	-o-font-smoothing: antialiased;
 	-ms-font-smoothing: antialiased;
 	font-smoothing: antialiased;
+}
+
+.double-line {
+	margin-top: 100px;
+}
+
+.breadcrumb {
+	position: absolute;
+	top: 100px;
+	left: 40px;
+	background: none;
+	font-size: 1.5rem;
+	color: white;
+}
+
+.section-p {
+	color: white;
+	font-size: 1.8rem;
+	padding-top: 50px;
+	padding-bottom: 30px;
+}
+
+.section-p h6 {
+	font-size: 20px;
 }
 
 .subpage-title {
@@ -636,12 +714,6 @@ embed {
 
 }
 
-#bigTriangleColor {
-	fill: #0e6a97;
-	stroke: #0e6a97;
-	stroke-width: 2
-}
-
 #bigTriangleColor2 {
 	fill: #004667;
 	stroke: #004667;
@@ -868,10 +940,15 @@ section::after {
 .navbar-default {
 	position: absolute;
 	top: 0px;
-	background-color: white;
+	background-color: transparent;
 	border: none;
 	font-family: "DK", Arial, sans-serif;
 	font-size:1.6rem;
+	min-height: 90px;
+}
+
+#nav-header-int {
+	background-color: white;
 }
 
 .navbar-default .navbar-toggle {
@@ -905,27 +982,33 @@ button:focus {
 	margin-left: -300px;
 }
 
-.navbar-default .navbar-nav > li > a {
+#nav-header .navbar-nav > li > a,
+#nav-header-int .navbar-nav > li > a {
 	padding: 25px 20px;
 	text-align: center;
 	text-transform: uppercase;
 	color: #D6C5AA;
 }
 
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus{
-
+#nav-header .navbar-nav > li > a:hover,
+#nav-header .navbar-nav > li > a:focus{
 	color: white;
 }
 
+#nav-header-int .navbar-nav > li > a:hover,
+#nav-header-int .navbar-nav > li > a:focus{
+	color: black;
+}
 
 .dropdown-menu {
-	font-family: Gisha, Arial, sans serif;
+	font-family: "DK", Arial, sans serif;
+	font-size: 1.2rem;
 	width: 100%;
 	border: 0;
-	background-color: transparent;
+	border-radius: 0;
+	background-color: rgba(0,0,0,0.7);
 	box-shadow: none;
-	top:80%;
+	top:70px;
 	text-align: left;
 }
 
@@ -938,7 +1021,7 @@ button:focus {
 }
 
 .dropdown-menu > li > a:hover {
-	background-color: transparent;
+	background-color: rgba(0,0,0,0.8);
 	color: #fff;
 }
 
@@ -1072,15 +1155,6 @@ td:first-child {
 .panel-body a:hover > i {
 	color: #004667;
 	transition-duration: 1s;
-}
-
-.box {
-	border: 1px solid #fff;
-	padding: 40px;
-	color: #777;
-	background-color: #fff;
-	margin-left: 30px;
-	margin-right: 30px;
 }
 
 
