--- a/css/main.css
+++ b/css/main.css
@@ -183,6 +183,14 @@ a:hover {
 	background-image: url('../images/un_membersflags.jpg');
 	-webkit-background-size: cover;
 	background-size: cover;
+	margin-left: 15px;
+	margin-right: 15px;
+}
+
+.loc-photo {
+	background-image: url('../images/location.png');
+	-webkit-background-size: cover;
+	background-size: cover;
 }
 
 .teste {
@@ -944,11 +952,12 @@ section::after {
 	border: none;
 	font-family: "DK", Arial, sans-serif;
 	font-size:1.6rem;
-	min-height: 90px;
+	min-height: 80px;
 }
 
 #nav-header-int {
 	background-color: white;
+	box-shadow: 0px 0.5px 3px;
 }
 
 .navbar-default .navbar-toggle {
