--- a/css/main.css
+++ b/css/main.css
@@ -118,10 +118,71 @@ p {
 	line-height: 2rem;
 }
 
+/*
 ======================================
+Background Images
+====================================== 
+*/
+
+.background {
+	-webkit-background-size: cover;
+	background-size: cover;
+	margin-left: -15px;
+	margin-right: -15px;
+	overflow: hidden;
+}
+
+#apec {
+	background-image: url('../images/apec.png');	
+}
+
+#cjtf {
+	background-image: url('../images/cjtf.png');	
+}
+
+#cosiplan {
+	background-image: url('../images/cosiplan.png');	
+}
+
+#disec {
+	background-image: url('../images/disec.png');	
+}
+
+#ilc {
+	background-image: url('../images/ilc.png');	
+}
+
+#ipc {
+	background-image: url('../images/ipc.png');	
+}
+
+#location {
+	background-image: url('../images/location.png');	
+}
+
+#mun {
+	background-image: url('../images/mun.png');	
+}
+
+#uacps {
+	background-image: url('../images/uacps.png');	
+}
+
+#unhr {
+	background-image: url('../images/unhr.png');	
+}
+
+#unsc {
+	background-image: url('../images/unsc.png');
+}
 
 
-/* Effect 4: bottom border enlarge */
+/*
+======================================
+Effect 4: bottom border enlarge
+====================================== 
+*/
+
 .cl-effect-4 a {
 	padding: 0 0 10px;
 }
@@ -187,12 +248,6 @@ a:hover {
 	margin-right: 15px;
 }
 
-.loc-photo {
-	background-image: url('../images/location.png');
-	-webkit-background-size: cover;
-	background-size: cover;
-}
-
 .teste {
 	border: 1px solid;
 	margin-left: 40%;
@@ -233,12 +288,6 @@ a:hover {
 
 #conference-title {
 	background-image: url('images/conference_mini.jpg');
-	-webkit-background-size: cover;
-	background-size: cover;
-}
-
-#committees-title {
-	background-image: url('images/un_assembly-lg_mini.jpg');
 	-webkit-background-size: cover;
 	background-size: cover;
 }
@@ -417,21 +466,16 @@ embed {
 	padding: 15px;
 }
 
-#committees {
-	background-image: url('../images/un_membersflags.jpg');
-	background-size: cover;
-}
-
 .orange {
-	background-color: #cb7223;
-}
-
-.orange-70 {
-	background-color: #F29B44;
+	background-color: rgba(201, 114, 46, 1);
 }
 
 .orange-50 {
-	background-color: rgb(219,127,44);
+	background-color: rgba(201, 114, 46, 0.93);
+}
+
+.orange-70 {
+	background-color: rgba(201, 114, 46, 0.7);
 }
 
 .content {
@@ -929,12 +973,6 @@ section::after {
 	-webkit-transform: translateX(-50%) rotate(-45deg);
 	transform: translateX(-50%) rotate(-45deg);
 }
-
-.committees .ss-style-cross::before,
-.committees .ss-style-cross::after {
-	background: #fff;
-}
-
 
 
 /* Mudancas no layout do Bootstrap */
