--- a/css/main.css
+++ b/css/main.css
@@ -160,8 +160,16 @@ Background Images
 	background-image: url('../images/location.png');	
 }
 
+#matrix {
+	background-image: url('../images/matrix.png');	
+}
+
 #mun {
 	background-image: url('../images/mun.png');	
+}
+
+#sponsors {
+	background-image: url('../images/sponsors.png');
 }
 
 #register {
@@ -796,6 +804,45 @@ embed {
 .about > h3:last-of-type {
 	font-size: 15.5rem;
 	margin-top: -40px;
+}
+
+.sponsor-logo {
+	width: 170px;
+	height: 170px;
+	background-color: #FFFFFF;
+	display: inline-block;
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, 0);
+}
+
+.sponsor-logo:before {
+	content: '';
+	border: 1px solid #96626E;
+	width: 200px;
+	height: 200px;
+	display: inline-block;
+	margin-top: -15px;
+	margin-left: -15px;
+}
+
+.sponsor-logo img {
+	width: 120px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.sponsor-logo:hover {
+	padding-left: 0;
+	padding-right: 0;
+}
+
+.no-margin {
+	margin-left: -15px;
+	margin-right: -15px;
 }
 
 /* Details */
