--- a/css/mainNew.css
+++ b/css/mainNew.css
@@ -358,6 +358,10 @@ Conference Section
 	font-size: 16px;
 }
 
+.schedule-boxBigger {
+	padding-bottom: 42px;
+}
+
 .schedule-weekDay {
 	font-size: 35px;
 }
