--- a/css/mainNew.css
+++ b/css/mainNew.css
@@ -245,6 +245,10 @@ Background Images
 	background-image: url('../images/apec.png');
 }
 
+#award {
+	background-image: url('../images/awards.png');
+}
+
 #cjtf {
 	background-image: url('../images/cjtf.png');
 }
@@ -259,6 +263,10 @@ Background Images
 
 #feesanddates {
 	background-image: url('../images/dates.png');
+}
+
+#history {
+	background-image: url('../images/history.png');
 }
 
 #ilc {
@@ -299,6 +307,10 @@ Background Images
 
 #sponsors {
 	background-image: url('../images/sponsors.png');
+}
+
+#socialEvents {
+	background-image: url('../images/social_events.png');
 }
 
 #studyGuide {
@@ -370,10 +382,24 @@ Conference Section
 	padding-bottom: 40px;
 }
 
-.schedule-box {
+.schedule-box,
+.socialEvents-box {
 	border: 1px solid #A2ABAA;
 	padding: 10px 30px;
 	font-size: 16px;
+}
+
+.socialEvents-box {
+	padding: 10px 20px;
+	min-height: 400px;
+}
+
+.scheduleRow-2nd .socialEvents-box {
+	min-height: 500px;
+}
+
+.scheduleRow-2nd .socialEvents-box2 {
+	min-height: 400px;
 }
 
 .schedule-boxBigger {
@@ -384,14 +410,27 @@ Conference Section
 	font-size: 35px;
 }
 
+.socialEvents-name {
+	font-size: 28px;
+}
+
 .schedule-date {
 	font-size: 23px;
+	margin-bottom: 40px;
+}
+
+.socialEvents-date {
+	font-size: 20px;
 	margin-bottom: 40px;
 }
 
 .schedule-description {
 	position: absolute;
 	left: 150px;
+}
+
+.socialEvents-asterisk {
+	margin-top: 70px;
 }
 
 .mainAccommodation-row,
@@ -732,7 +771,7 @@ embed {
 }
 
 .purple-50 {
-	background-color: rgba(114,68,79,0.93)
+	background-color: rgba(114,68,79,0.93);
 }
 
 .purple {
@@ -924,6 +963,11 @@ embed {
 	display: block;
 }
 
+.modal-timeline .modal-img {
+	width: 150px;
+	border-radius: 100%;
+}
+
 .profiles .fa {
 	border: 3px solid #fff;
 	-webkit-border-radius: 100%;
@@ -1000,7 +1044,8 @@ embed {
 	font-size: 27px;
 }
 
-.modal-secretariat .modal-header {
+.modal-secretariat .modal-header,
+.modal-timeline .modal-header {
 	border-color: #72444F;
 }
 
@@ -1013,7 +1058,8 @@ embed {
 }
 
 
-.modal-secretariat {
+.modal-secretariat,
+.modal-timeline {
 	background-color: #96626D;
 }
 
@@ -1114,6 +1160,158 @@ embed {
 	margin-top: -40px;
 }
 
+.timeline-row {
+	margin-bottom: 0px;
+}
+
+.timeline-row .timeline-left {
+	text-align: right;
+}
+
+.timeline-row .timeline-right {
+	text-align: left;
+}
+
+.timeline-row:first-of-type .timeline-right:before,
+.timeline-row:first-of-type .timeline-left:before {
+	width: 1px;
+	height: 15px;
+	background-color: #96626E;
+	position: absolute;
+	top: -2px;
+	content: '';
+}
+
+.timeline-row:first-of-type .timeline-right:before {
+	left: 4px;
+	-webkit-transform: rotate(140deg);
+	-moz-transform: rotate(140deg);
+	transform: rotate(140deg);
+}
+
+.timeline-row:first-of-type .timeline-left:before {
+	right: 4px;
+	-webkit-transform: rotate(220deg);
+	-moz-transform: rotate(220deg);
+	transform: rotate(220deg);
+}
+
+.timeline-row:last-of-type .timeline-right:after {
+	width: 2px;
+	height: 102px;
+	background: rgb(114,68,79);
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: -1px;
+}
+
+.timeline-row:nth-of-type(even) .timeline-right {
+	border-left: 1px solid #96626E;
+	margin-left: -1px;
+	padding-bottom: 30px;
+}
+
+.timeline-row:nth-of-type(odd) .timeline-left {
+	border-right: 1px solid #96626E;
+	padding-bottom: 30px;
+}
+
+.timeline-img {
+	border-radius: 100%;
+}
+
+.timeline-img:hover {
+	opacity: 0.7;
+	cursor: pointer;
+}
+
+.timeline-row .timeline-year {
+	display: inline-block;
+	background-color: #96626E;
+	font-family: "DK", Arial, sans-serif;
+	color: #FFF;
+	padding: 5px 15px;
+	margin-top: 57px;
+}
+
+.timeline-row:nth-of-type(odd) .timeline-year,
+.timeline-row:nth-of-type(even) .timeline-img {
+	margin-left: 5px;
+}
+
+.timeline-row:nth-of-type(even) .timeline-year,
+.timeline-row:nth-of-type(odd) .timeline-img {
+	margin-right: 5px;
+}
+
+.timeline-row .timeline-year:before {
+	width: 0;
+	height: 0;
+	border-top: 10px solid transparent;
+	border-bottom: 10px solid transparent;
+	content: '';
+	position: absolute;
+	top: 64px;
+}
+
+.timeline-row:nth-of-type(odd) .timeline-year:before {
+	border-right: 10px solid #96626E;
+	left: 12px;
+}
+
+.timeline-row:nth-of-type(even) .timeline-year:before {
+	border-left: 10px solid #96626E;
+	right: 12px;
+}
+
+.timeline-row .timeline-year:after {
+	width: 9px;
+	height: 9px;
+	background: #96626E;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	border-radius: 10px;
+	content: '';
+	position: absolute;
+	top: 69px;
+}
+
+.timeline-row:nth-of-type(odd) .timeline-year:after {
+	left: -5px;
+}
+
+.timeline-row:nth-of-type(even) .timeline-year:after {
+	right: -4px;
+}
+
+.timeline-row .timeline-edition,
+.timeline-row .timeline-name {
+	font-family: "DK", Arial, sans-serif;
+	font-size: 13px;
+	position: absolute;
+	top: 54px;
+}
+
+.timeline-row .timeline-edition {
+	color: #96626E;
+	top: 54px;
+}
+
+.timeline-row .timeline-name {
+	top: 70px;
+}
+
+.timeline-row:nth-of-type(odd) .timeline-edition,
+.timeline-row:nth-of-type(odd) .timeline-name {
+	left: 105px;
+}
+
+.timeline-row:nth-of-type(even) .timeline-edition,
+.timeline-row:nth-of-type(even) .timeline-name {
+	right: 105px;
+}
+
 .sponsor-logo {
 	width: 170px;
 	height: 170px;
@@ -1122,6 +1320,8 @@ embed {
 	position: relative;
 	top: 50%;
 	left: 50%;
+	-webkit-transform: translate(-50%, 0);
+	-moz-transform: translate(-50%, 0);
 	transform: translate(-50%, 0);
 }
 
@@ -1140,6 +1340,8 @@ embed {
 	position: absolute;
 	top: 50%;
 	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	-moz-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
 }
 
@@ -1156,6 +1358,8 @@ embed {
 	position: relative;
 	top: 50%;
 	left: 50%;
+	-webkit-transform: translate(-50%, 0);
+	-moz-transform: translate(-50%, 0);
 	transform: translate(-50%, 0);
 }
 
@@ -1174,6 +1378,8 @@ embed {
 	position: absolute;
 	top: 50%;
 	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	-moz-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
 }
 
@@ -1400,8 +1606,10 @@ section::after {
 	height: 75%;
 	background: inherit;
 	-webkit-transform: rotate(-2deg);
+	-moz-transform: rotate(-2deg);
 	transform: rotate(-2deg);
 	-webkit-transform-origin: 0 0;
+	-moz-transform-origin: 0 0;
 	transform-origin: 0 0;
 }
 
@@ -1409,8 +1617,10 @@ section::after {
 	height: 50%;
 	background: #004667;
 	-webkit-transform: rotate(-3deg);
+	-moz-transform: rotate(-3deg);
 	transform: rotate(-3deg);
 	-webkit-transform-origin: 3% 0;
+	-moz-transform-origin: 3% 0;
 	transform-origin: 3% 0;
 }
 
@@ -1427,16 +1637,19 @@ section::after {
 	height: 2px;
 	left: 50%;
 	-webkit-transform-origin: 50% 50%;
+	-moz-transform-origin: 50% 50%;
 	transform-origin: 50% 50%;
 }
 
 .ss-style-cross::before {
 	-webkit-transform: translateX(-50%) rotate(45deg);
+	-moz-transform: translateX(-50%) rotate(45deg);
 	transform: translateX(-50%) rotate(45deg);
 }
 
 .ss-style-cross::after {
 	-webkit-transform: translateX(-50%) rotate(-45deg);
+	-moz-transform: translateX(-50%) rotate(-45deg);
 	transform: translateX(-50%) rotate(-45deg);
 }
 
@@ -1729,6 +1942,20 @@ td:first-child {
 		display: none;
 	}
 
+	.studyGuide-logo {
+		width: 110px;
+		height: 110px;
+	}
+
+	.studyGuide-logo:before {
+		width: 140px;
+		height: 140px;
+	}
+
+	.studyGuide-logo img {
+		width: 105px;
+	}
+
 }
 
 @media (max-width:767px) {
@@ -1805,6 +2032,18 @@ td:first-child {
 		top: -26px;
 	}
 
+	.studyGuide-logo {
+		margin-bottom: 50px;
+	}
+
+	.section-p {
+		padding: 0;
+	}
+
+	.section-p:first-of-type {
+		padding-top: 50px;
+	}
+
 }
 
 @media (max-width:480px) {
@@ -1841,6 +2080,7 @@ td:first-child {
 	.subsection-text > iframe {
 		display:none;
 	}
+
 }
 
 @media print {
